add favicon in html file

--- a/web/index.html
+++ b/web/index.html
@@ -26,6 +26,7 @@
   <title>adopt_ta_waifu_android_flutter</title>
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" type="text/css" href="splash/style.css">
+  <link rel="icon" type="image/png" href="/favicon.png"/>
 </head>
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
